--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="overlay">
         </div>
         <div>
-            <img class="react-logo" src="img/react-logo.svg" />
+            <img id="react-logo" src="img/react-logo.svg" />
             <h1>Build Native Apps With React</h1>
             <div class="navbar">
                 <a href="#native">
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="section section2">
+    <div id='native' class="section section2">
         <div class="iphone-demo">
             <div class="iphone">
                 <img class="iphone-frame" src="img/iphone-frame.svg" />
@@ -44,7 +44,7 @@
             </p>
         </div>
     </div>
-    <div class="section section3">
+    <div id="touch" class="section section3">
         <div class="iphone-demo">
             <div class="iphone">
                 <img class="iphone-frame" src="img/iphone-frame.svg" />
@@ -58,24 +58,28 @@
             </p>
         </div>
     </div>
-    <div class="section section4">
+    <div id='android' class="section section4">
         <h1>Android Is Here</h1>
         <img id="android-robot" src="img/android-robot.svg" />
     </div>
     <div id="slider-control">
-        <a href="#native" class="active">
+        <a href="#intro-section" class="active">
+            <div class="dot"></div>
+        </a>
+        <a href="#native">
             <div class="dot"></div>
         </a>
         <a href="#touch">
             <div class="dot"></div>
         </a>
-        <a href="#async">
-            <div class="dot"></div>
-        </a>
-        <a href="#flex">
+        <a href="#android">
             <div class="dot"></div>
         </a>
     </div>
+    
+    <script src='js/app.js'></script>
+    <script type="text/javascript" src="node_modules/gsap/src/uncompressed/TweenMax.js"></script>
+    <script type="text/javascript" src="node_modules/gsap/src/uncompressed/plugins/ScrollToPlugin.js"></script>
 </body>
 
 </html>
