--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="section section1" id='intro-section'>
         <div class="overlay">
         </div>
+        <div id="background-opacity"></div>
         <div>
             <img id="react-logo" src="img/react-logo.svg" />
             <h1>Build Native Apps With React</h1>
@@ -30,13 +31,15 @@
             </div>
         </div>
     </div>
-    <div id='native' class="section section2">
+    <div id="iphone-overlay">
         <div class="iphone-demo">
             <div class="iphone">
                 <img class="iphone-frame" src="img/iphone-frame.svg" />
                 <img class="iphone-content" src="img/tumblr-demo.jpg" />
             </div>
         </div>
+    </div>
+    <div id='native' class="section section2">
         <div class="feature-description">
             <h2>Native Experience</h2>
             <p>
@@ -45,13 +48,7 @@
         </div>
     </div>
     <div id="touch" class="section section3">
-        <div class="iphone-demo">
-            <div class="iphone">
-                <img class="iphone-frame" src="img/iphone-frame.svg" />
-                <img class="iphone-content" src="img/swype-demo.jpg" />
-            </div>
-        </div>
-        <div class="feature-description">
+      <div class="feature-description">
             <h2>Touches &amp; Gestures</h2>
             <p>
                 React Native implements a powerful responder system to negotiate touches in complex view hierarchies. It allows you to build complex UI, and handle user interactions precisely.
@@ -80,6 +77,10 @@
     <script src='js/app.js'></script>
     <script type="text/javascript" src="node_modules/gsap/src/uncompressed/TweenMax.js"></script>
     <script type="text/javascript" src="node_modules/gsap/src/uncompressed/plugins/ScrollToPlugin.js"></script>
+    <script type="text/javascript" src="node_modules/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
+
+    <script type="text/javascript" src="node_modules/scrollmagic/scrollmagic/minified/plugins/animation.gsap.min.js"></script>
+    <script type="text/javascript" src="node_modules/scrollmagic/scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
 </body>
 
 </html>
